tests/ui/privacy/pub-priv-dep/diamond_deps.stderr
error: type `Shared` from private dependency 'shared' in public interface
  --> $DIR/diamond_deps.rs:32:1
   |
LL | pub fn leaks_priv() -> diamond_priv_dep::Shared {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `shared` is an indirect dependency reached through the private direct dependency `diamond_priv_dep`
   = help: consider marking `diamond_priv_dep` public if exposing this item is intended
note: the lint level is defined here
  --> $DIR/diamond_deps.rs:27:9
   |
LL | #![deny(exported_private_dependencies)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `diamond_priv_dep::SharedInType` from private dependency 'diamond_priv_dep' in public interface
  --> $DIR/diamond_deps.rs:42:5
   |
LL |     pub f: diamond_priv_dep::SharedInType
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

